--- a/charts/imagebuild/values.yaml
+++ b/charts/imagebuild/values.yaml
@@ -2,6 +2,25 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+completionDeadlineSeconds: 200
+failedBuildsHistoryLimit: 2
+runPolicy: 'serial'
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
+inputType: git # docker
+uri: https://github.com/JatinderKumarChaurasia/ocp_test
+ref: main
+contextDir: .
+sourceSecret: ''
+
+### ---------------------New ------------------
 replicaCount: 1
 
 image:
@@ -14,14 +33,7 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+
 
 podAnnotations: {}
 
@@ -29,12 +41,12 @@ podSecurityContext: {}
   # fsGroup: 2000
 
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+#   capabilities:
+#     drop:
+#     - ALL
+#   readOnlyRootFilesystem: true
+#   runAsNonRoot: true
+#   runAsUser: 1000
 
 service:
   type: ClusterIP
