--- a/charts/gitbuild/values.yaml
+++ b/charts/gitbuild/values.yaml
@@ -22,6 +22,12 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+build:
+  image:
+    registry: ""
+    name: ""
+    tag: ""
+
 #podAnnotations: {}
 
 #podSecurityContext: {}
